--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="./css/reset.css">
     <title>manage</title>
   </head>
   <body>
@@ -15,3 +16,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script src="https://cdn.bootcss.com/echarts/4.3.0-rc.2/echarts.js"></script>
